--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,7 @@ header nav ul li a:hover {
     color: #E74C3C;
 }
 
-main {
-    padding: 20px;
-}
+
 
 .mapa {
     position: relative;
@@ -96,40 +94,26 @@ main {
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
     margin: 20px; /* Para separar las imágenes */
 }
 
 .servicio-item img {
     width: 100%;
+    height: 100%;
     border-radius: 8px;
-    transform: scale(2); /* Aplica un zoom permanente del 10% */
-    transition: transform 0.3s ease; /* Transición suave */
 }
 
-.servicio-item button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Centra el botón sobre la imagen */
-    padding: 10px 20px;
-    background-color: #e74c3c; /* Color rojo similar al botón anterior */
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    z-index: 1; /* Asegura que el botón esté por encima de la imagen */
-}
-
-.servicio-item p {
+.servicio-item img p {
     position: relative;
-    z-index: 2; /* Asegura que el texto esté por encima de la imagen */
-    margin-top: 10px;
     font-size: 18px;
     color: white;
     font-weight: bold; /* Mantiene el estilo en negrita */
     text-transform: uppercase; /* Mantiene el texto en mayúsculas */
+    padding: 10px; /* Ajusta el valor según tu necesidad */
+    background-color: gray; /* Cambia el color si es necesario */
+    border-radius: 5px;
 }
+
 
 footer {
     text-align: center;
