--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,17 @@ footer p {
     color: #C0392B;
 }
 
+#nosotros{
+    text-align: center;
+    padding-top: 30px;
+}
+
+#nosotros ul li{
+    padding: 20px;
+}
+
+#nosotros ul li p{
+    font-size: 16px;
+    text-align: justify;
+}
+
