--- a/styles.css
+++ b/styles.css
@@ -62,27 +62,37 @@ header nav ul li a:hover {
 }
 
 .mapa button {
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #E74C3C;
-    color: white;
-    padding: 10px 20px;
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
     border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
     cursor: pointer;
-    font-size: 18px;
-    border-radius: 5px;
+    outline: none;
 }
 
 .mapa button:hover {
     background-color: #C0392B;
+    box-shadow: 0px 15px 20px rgba(222, 76, 73, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+}
+
+.mapa button:active {
+    transform: translateY(-1px);
 }
 
 .servicios {
     display: flex;
     justify-content: center;
-    gap: 20px; /* Espacio entre los elementos */
+    gap: 20px;
+    /* Espacio entre los elementos */
     margin-top: 20px;
 }
 
@@ -108,7 +118,8 @@ header nav ul li a:hover {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Fondo semitransparente */
     color: white;
     padding: 10px 0;
     font-size: 16px;
@@ -133,6 +144,7 @@ footer p {
     font-size: 14px;
     color: #777;
 }
+
 /* Estilo de los formularios emergentes */
 .overlay {
     position: fixed;
@@ -148,7 +160,8 @@ footer p {
 }
 
 .popup {
-    position: relative; /* Asegúrate de que el contenedor sea relativo para que el botón de cerrar se posicione correctamente */
+    position: relative;
+    /* Asegúrate de que el contenedor sea relativo para que el botón de cerrar se posicione correctamente */
     background-color: #2c2c2c;
     padding: 20px;
     border-radius: 3px;
@@ -169,7 +182,8 @@ footer p {
     color: #FFF;
 }
 
-.popup input, .popup textarea {
+.popup input,
+.popup textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -188,9 +202,11 @@ footer p {
 }
 
 .popup button.close {
-    position: absolute; /* Posiciona el botón de cerrar de forma absoluta dentro del contenedor */
+    position: absolute;
+    /* Posiciona el botón de cerrar de forma absoluta dentro del contenedor */
     top: 10px;
-    right: 10px; /* Alinea a la derecha */
+    right: 10px;
+    /* Alinea a la derecha */
     background-color: #E74C3C;
     padding: 5px 10px;
     font-size: 14px;
@@ -204,32 +220,37 @@ footer p {
     background-color: #C0392B;
 }
 
-#registro_link{
+#registro_link {
     text-decoration: none;
     color: #777;
 }
 
-#recuperar_password_link{
+#recuperar_password_link {
     text-decoration: none;
     color: #C0392B;
 }
 
-#nosotros{
+#nosotros {
     text-align: center;
     padding-top: 30px;
 }
 
-#nosotros ul li{
+#nosotros ul li {
     padding: 20px;
 }
 
-#nosotros ul li p{
+#nosotros ul li p {
     font-size: 16px;
     text-align: justify;
 }
 
-#img_nosotros{
+#img_nosotros {
     width: 100%;
     height: auto;
 }
 
+#btn-service {
+    padding: 5px;
+    background-color: #C0392B;
+    border-radius: 5px;
+}
