--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     background-color: #2C3E50;
     color: #FFF;
     font-size: 16px;
+    overflow: hidden;
 }
 
 header {
@@ -302,4 +303,9 @@ footer p {
 
 body.active-sidebar {
     overflow: hidden;
+}
+
+#map{
+    width: 100%;
+    height: 650px;
 }
