--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
     background-color: #2C3E50;
     color: #FFF;
     font-size: 16px;
-    overflow: hidden;
 }
 
 header {
@@ -50,43 +49,9 @@ header nav ul li a:hover {
 }
 
 .mapa {
-    position: relative;
+    position: absolute;
     text-align: center;
-}
-
-.mapa iframe {
-    width: 100%;
-    max-width: 100%;
-    height: 900px;
-    border: 0;
-    margin-bottom: 20px;
-}
-
-.mapa button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-}
-
-.mapa button:hover {
-    background-color: #C0392B;
-    box-shadow: 0px 15px 20px rgba(222, 76, 73, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-}
-
-.mapa button:active {
-    transform: translateY(-1px);
+    overflow: hidden;
 }
 
 .servicios {
@@ -119,7 +84,7 @@ header nav ul li a:hover {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgb(46, 46, 46);
     /* Fondo semitransparente */
     color: white;
     padding: 10px 0;
