--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,8 @@ body.active-sidebar {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 #dropdown-lista-mecanicos ul li {
@@ -308,7 +310,7 @@ body.active-sidebar {
 
 /* Mostrar la lista desplegable cuando se activa */
 #dropdown-lista-mecanicos.show {
-    display: block;
+    display: flex;
     flex-direction: column;
 }
 
