--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ footer p {
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: #111;
+    background-color: #2c3e50;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -279,6 +279,7 @@ body.active-sidebar {
     width: 100%;
     height: 650px;
 }
+
 /* Oculta la lista desplegable por defecto */
 #dropdown-lista-mecanicos {
     display: none;
