--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,12 @@ header nav ul li a:hover {
 }
 
 .mapa {
-    position: absolute;
-    text-align: center;
+    position: relative;
     overflow: hidden;
+    text-align: center;
+    width: 100%;
+    height: 650px;
+    
 }
 
 .servicios {
