modifico input de mantencion en forms
lo cambio de texto a un select options

--- a/styles/stylesForms.css
+++ b/styles/stylesForms.css
@@ -82,3 +82,12 @@
     text-decoration: none;
     color: #C0392B;
 }
+
+#especialidad-mecanico {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #CCC;
+}
+
