--- a/styles/stylesForms.css
+++ b/styles/stylesForms.css
@@ -9,7 +9,7 @@
     display: none;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 3;
 }
 
 .popup {
@@ -21,6 +21,10 @@
     text-align: center;
     max-width: 400px;
     width: 90%;
+}
+
+#contact-form{
+    max-width: 600px;
 }
 
 .popup h2 {
@@ -91,3 +95,15 @@
     border: 1px solid #CCC;
 }
 
+.help-container {
+    display: flex;
+    justify-content: space-between;
+    /* Distribuye los elementos de forma equitativa */
+}
+
+#callhelp,
+#mailhelp {
+    width: 45%;
+    padding: 20px;
+
+}
