--- a/styles/stylesServicio.css
+++ b/styles/stylesServicio.css
@@ -14,6 +14,7 @@
     border-radius: 9px;
     background: #bb2929;
     border: none;
+    font-size: 16px;
     font-family: inherit;
     text-align: center;
     cursor: pointer;
