--- a/styles/stylesHeader.css
+++ b/styles/stylesHeader.css
@@ -6,11 +6,6 @@ header {
     align-items: center;
 }
 
-header .logo h1 {
-    color: #FFF;
-    font-size: 24px;
-}
-
 header nav ul {
     list-style: none;
     display: flex;
@@ -39,4 +34,13 @@ header nav ul li a:hover {
     padding: 5px;
     background-color: #C0392B;
     border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+    header nav ul li a{
+        font-size: 14px;
+    }
+    #btn-service{
+        text-align: center;
+    }
 }
