--- a/styles/stylesServicio.css
+++ b/styles/stylesServicio.css
@@ -83,6 +83,7 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 300px;
     flex: 1;
+    margin-top: 35px;
 }
 
 .servicio-item img {
@@ -108,4 +109,12 @@
 
 .servicio-boton:hover {
     background-color: rgba(0, 0, 0, 0.9);
+}
+
+#serviceTitle{
+    text-align: center;
+    padding: 50px;
+    font-size: 25px;
+    background-color: #2b3d4f;
+    text-transform: uppercase;
 }
