--- a/styles/stylesServicio.css
+++ b/styles/stylesServicio.css
@@ -12,7 +12,7 @@
     padding-bottom: 16px;
     padding-top: 16px;
     border-radius: 9px;
-    background: #bb2929;
+    background: #C0392B;
     border: none;
     font-size: 16px;
     font-family: inherit;
@@ -30,7 +30,7 @@
 }
 
 #bottone1:hover {
-    box-shadow: 7px 20px 56px -14px #ff0000;
+    box-shadow: 7px 20px 56px -14px #C0392B;
 }
 
 #bottone1:active {
