--- a/styles/stylesForms.css
+++ b/styles/stylesForms.css
@@ -10,20 +10,25 @@
     justify-content: center;
     align-items: center;
     z-index: 3;
+    overflow-y: auto;
+    /* Permitir scroll si el contenido del overlay es grande */
 }
 
 .popup {
     position: relative;
-    /* Asegúrate de que el contenedor sea relativo para que el botón de cerrar se posicione correctamente */
     background-color: #2c2c2c;
     padding: 20px;
     border-radius: 3px;
     text-align: center;
     max-width: 400px;
     width: 90%;
+    max-height: 80%;
+    /* Limitar la altura del formulario */
+    overflow-y: auto;
+    /* Permitir scroll si el contenido del formulario es grande */
 }
 
-#contact-form{
+#contact-form {
     max-width: 600px;
 }
 
@@ -60,10 +65,8 @@
 
 .popup button.close {
     position: absolute;
-    /* Posiciona el botón de cerrar de forma absoluta dentro del contenedor */
     top: 10px;
     right: 10px;
-    /* Alinea a la derecha */
     background-color: #E74C3C;
     padding: 5px 10px;
     font-size: 14px;
@@ -98,12 +101,10 @@
 .help-container {
     display: flex;
     justify-content: space-between;
-    /* Distribuye los elementos de forma equitativa */
 }
 
 #callhelp,
 #mailhelp {
     width: 45%;
     padding: 20px;
-
 }
