--- a/styles/stylesServicio.css
+++ b/styles/stylesServicio.css
@@ -48,29 +48,49 @@
 /* servicios */
 
 .servicios {
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    /* Por defecto, en filas */
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas de igual ancho */
     margin-top: 20px;
+    justify-content: center; /* Centra el grid horizontalmente */
+    max-width: 1200px; /* Establece un ancho máximo para el contenedor */
+    margin-left: auto; /* Centra el contenedor horizontalmente */
+    margin-right: auto; /* Centra el contenedor horizontalmente */
 }
 
-@media (max-width: 768px) {
+
+@media (max-width: 936px) {
     .servicios {
-        flex-direction: column;
+        grid-template-columns: repeat(2, 1fr); /* Cambia a 2 columnas */
+        grid-gap: 15px; /* Ajusta el espacio entre las cards */
+        justify-content: center; /* Centra el grid horizontalmente */
+    max-width: 1200px; /* Establece un ancho máximo para el contenedor */
+        margin-left: auto; /* Centra el contenedor horizontalmente */
+        margin-right: auto; /* Centra el contenedor horizontalmente */
     }
 
     .servicio-item {
-        max-width: 100%;
-        /* Ocupa todo el ancho disponible en pantallas pequeñas */
+        max-width: 100%; /* Ocupa todo el ancho disponible en la columna */
     }
 
     .servicio-boton {
-        font-size: 14px;
-        /* Reduce el tamaño de la fuente en pantallas pequeñas */
+        font-size: 14px; /* Reduce el tamaño de la fuente en pantallas pequeñas */
+    }
+}
+
+@media (max-width: 600px) {
+    .servicios {
+        grid-template-columns: 1fr; /* Cambia a 1 columna en pantallas aún más pequeñas */
+        grid-gap: 10px; /* Ajusta el espacio entre las cards */
+        margin-left: auto; /* Centra el contenedor horizontalmente */
+        margin-right: auto; /* Centra el contenedor horizontalmente */
+    }
+
+    .servicio-item {
+        max-width: 100%; /* Ocupa todo el ancho disponible en la columna */
+    }
+
+    .servicio-boton {
+        font-size: 14px; /* Mantén el tamaño de la fuente reducido */
     }
 }
 
